wrapping body to fix navbar

--- a/public/css/admin-teams.css
+++ b/public/css/admin-teams.css
@@ -38,11 +38,6 @@ input {
 	padding: 14px 0px;
 }
 
-.wrapper {
-	margin-right: 40px;
-	margin-bottom: 100px;
-}
-
 .parts-list {
 	margin-top: 10px;
 	max-height: 90px;
